# woev-music-backend

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
src/models/: user_models.py
src/models/db_models/: song_queue.py
src/models/pydantic_models/: song_models.py
src/routers/: auth_routes.py  spotify.py  spotify_routes.py  voting_routes.py
src/services/: auth_service.py  spotify.py  spotify_service.py  voting_service.py
