[tool.poetry]
name = "src"
version = "0.1.0"
description = "Backend for Woanders e.V. Music"
authors = ["Marco Murawski <git@murasko.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
websockets = "^12.0"
spotipy = "^2.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
