[tool.poetry]
name = "src"
version = "0.1.0"
description = "Backend for Woanders e.V. Music"
authors = ["Marco Murawski <git@murasko.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
websockets = "^12.0"
spotipy = "^2.24.0"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
